--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-beautify": "^1.10.0",
     "lex": "^1.7.9",
     "literal-require": "^1.0.5",
+    "lodash": "^4.17.11",
     "uuid": "^3.3.2"
   },
   "namespace": {
